# nukular

./: .gitignore  CMakeLists.txt  README.md  batchInstall.sh
gizmo/: Clarity.gizmo
python/: init.py  menu.py.in
src/: AdditiveKeyer.cpp  CMakeLists.txt  Circle.cpp  CircularRamp.cpp  CircularRays.cpp  CircularRings.cpp  Clarity.blink  Kontrast.cpp  Scroll.cpp  Toon.cpp  Vibrant.cpp
